Exclude existing link and script tags from index.html

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
     <link rel="manifest" href="favicon/manifest.json" />
 
     <title>Where are we?</title>
-    <link href="css/main.css" rel="stylesheet" />
-    <script src="js/index.js" type="module"></script>
+    <link dev href="css/main.css" rel="stylesheet" />
+    <script dev src="js/index.js" type="module"></script>
   </head>
   <body>
     <div id="background">
